--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nebula-defi-navigator</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>AToIoTA - IOTA EVM Investment Portfolio</title>
+    <meta name="description" content="AI-powered DeFi investment portfolio navigator for the IOTA EVM network" />
+    <meta name="author" content="AToIoTA" />
 
-    <meta property="og:title" content="nebula-defi-navigator" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="AToIoTA - IOTA EVM Investment Portfolio" />
+    <meta property="og:description" content="AI-powered DeFi investment portfolio navigator for the IOTA EVM network" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/public/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/public/favicon.ico" />
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
