--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="/public/favicon.ico" />
+    <script>
+      window.ENV = {
+        WALLET_CONNECT_PROJECT_ID: '%VITE_WALLET_CONNECT_PROJECT_ID%'
+      };
+    </script>
   </head>
 
   <body>
