--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AToIoTA - IOTA EVM Investment Portfolio</title>
+    <title>AToIoTA - AI-Powered DeFi Portfolio Management on IOTA</title>
     <meta name="description" content="AI-powered DeFi investment portfolio navigator for the IOTA EVM network" />
     <meta name="author" content="AToIoTA" />
 
