--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="AI-powered DeFi investment portfolio navigator for the IOTA EVM network" />
     <meta name="author" content="AToIoTA" />
 
-    <meta property="og:title" content="AToIoTA - IOTA EVM Investment Portfolio" />
+    <meta property="og:title" content="AToIoTA - AI-Powered DeFi Portfolio Management on IOTA" />
     <meta property="og:description" content="AI-powered DeFi investment portfolio navigator for the IOTA EVM network" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/public/favicon.ico" />
